--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -2,6 +2,8 @@
 *,
 ::after,
 ::before {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -66,8 +68,11 @@
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
   --max-width: 1250px;
+  --large-screen-width: 1170px;
+  --small-screen-width: 90vw;
   --fixed-width: 600px; /* to be changed later, ex: Froms */
   --card-width: 360px;
+  --spacing: 0.25rem;
 }
 
 /* fonts and scal from https://type-scale.com/ */
@@ -80,7 +85,8 @@ body {
   background: var(--backgroundColor);
   font-family: var(--bodyFont);
   font-weight: 400;
-  line-height: 1.75;
+  line-height: 1.5;
+  font-size: 0.875rem;
   color: var(--textColor);
 }
 
@@ -96,31 +102,59 @@ h3,
 h4,
 h5 {
   margin: 0;
-  margin-bottom: 1.38rem;
+  margin-bottom: 0.75rem;
   font-family: var(--headingFont);
   font-weight: 400;
   line-height: 1.3;
   text-transform: capitalize;
+  letter-spacing: var(--spacing);
 }
 
 h1 {
-  font-size: 3.052rem;
+  font-size: 3rem;
 }
 
 h2 {
-  font-size: 2.441rem;
+  font-size: 2rem;
 }
 
 h3 {
-  font-size: 1.953rem;
+  font-size: 1.5rem;
 }
 
 h4 {
-  font-size: 1.563rem;
+  font-size: 0.875rem;
 }
 
 h5 {
   font-size: 1.25rem;
+}
+p {
+  margin-bottom: 1.25rem;
+}
+
+@media screen and (min-width: 800px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
 }
 
 small,
@@ -142,7 +176,7 @@ ul {
 /* Image setup*/
 .img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   display: block;
   object-fit: cover;
 }
@@ -161,7 +195,9 @@ ul {
   text-transform: uppercase;
   color: var(--textColor);
   width: 140px;
+  box-shadow: var(--shadow-2);
 }
+
 .btn-primary {
   background-color: var(--primary-500);
   color: var(--white);
