--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -405,6 +405,7 @@ nav * {
 .card_img {
   position: relative;
   height: 330px;
+  overflow: hidden;
 }
 
 .card__no-stock {
@@ -559,7 +560,6 @@ nav * {
   height: 30px;
   border: 1px solid black;
   transition: var(--transition);
-  cursor: pointer;
 }
 
 .cart-item__info__attribute ul li.active:not(.color) {
@@ -567,11 +567,11 @@ nav * {
   font-weight: 100;
   color: var(--white);
 }
-
+/* 
 .cart-item__info__attribute ul li:hover:not(.color) {
   background-color: var(--gray-300);
   color: var(--gray-800);
-}
+} */
 
 .cart-item__controls {
   display: flex;
