--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -258,412 +258,12 @@ ul {
   max-width: var(--max-width);
 }
 
-/* Navbar */
-.header {
-  position: fixed;
-  top: 0;
-  width: 100vw;
-  z-index: 10001;
-  background-color: var(--white);
-}
-
-nav * {
+header * {
   margin: 0;
   padding: 0;
-}
-
-.nav__container {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.nav__links {
-  display: flex;
-  gap: 1rem;
-  text-transform: uppercase;
-  margin: 0;
-}
-
-.nav__link {
-  padding: 1rem;
-  cursor: pointer;
-  transition: var(--transition);
-  border-bottom: 3px solid transparent;
-}
-.nav__link:hover {
-  color: var(--gray-500);
-  border-bottom-color: var(--gray-500);
-}
-
-.nav__link-active {
-  color: var(--primary-500);
-  border-bottom-color: var(--primary-500);
-}
-
-.nav__link a {
-  color: inherit;
-}
-
-.nav__logo {
-  display: flex;
-  justify-content: center;
-  flex-grow: 1;
-}
-
-.nav__actions {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-
-.nav__action {
-  display: block;
-  padding: 1rem;
-  cursor: pointer;
-  position: relative;
-  display: flex;
-  align-items: center;
-  border-bottom: 3px solid transparent;
-  transition: var(--transition);
-}
-
-.nav__actions .currBtn {
-  font-size: var(--bodyFont);
-  line-height: var(--bodyFont);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-  cursor: pointer;
-}
-.nav__actions .currBtn p {
-  font-size: 1rem;
-  width: 1.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 0.35rem;
-}
-
-.nav__actions .currBtn p.up {
-  transform: translateY(30%);
-}
-
-.nav__action span {
-  border-radius: 50%;
-  display: grid;
-  place-content: center;
-  width: 1rem;
-  height: 1rem;
-  padding: 0.7rem;
-  background-color: var(--black);
-  color: var(--white);
-  position: absolute;
-  transform: translate(50%, -50%);
-}
-
-.nav__action:hover {
-  color: var(--gray-500);
-  border-bottom-color: var(--gray-500);
 }
 
 /* section */
 .section {
   margin: 5rem auto;
-}
-
-/* Products */
-.products {
-  display: grid;
-  justify-content: space-between;
-  grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
-  gap: 0.75rem;
-}
-
-/* Card */
-.card {
-  display: flex;
-  flex-direction: column;
-  font-size: 1.2rem;
-  position: relative;
-  padding: 1rem;
-  width: 100%;
-  max-width: var(--card-width);
-  height: 480px;
-  box-shadow: var(--shadow-2);
-  transition: var(--transition);
-}
-
-.card:hover {
-  box-shadow: var(--shadow-3);
-  scale: 1.025;
-}
-
-.card_img {
-  position: relative;
-  height: 330px;
-  overflow: hidden;
-}
-
-.card__no-stock {
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  color: var(--gray-500);
-  top: 50%;
-  left: 45%;
-  transform: translate(-50%, -50%);
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  line-height: 1.5rem;
-}
-
-.cart__discount {
-  position: absolute;
-  background-color: var(--primary-500);
-  color: var(--primary-300);
-  font-size: var(--smallText);
-  padding: 0.375rem 0.75rem;
-  transform: translate(0, 30%);
-}
-
-.cart_favorite {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-}
-
-.card__info {
-  position: relative;
-}
-
-.card__cart {
-  position: absolute;
-  right: 0;
-  top: -25%;
-  opacity: 0;
-  cursor: pointer;
-  transition: var(--transition);
-}
-
-.card:hover .card__info .card__cart {
-  opacity: 1;
-}
-
-.card .card__cart.show {
-  opacity: 1;
-}
-.card .card__cart.hide {
-  display: none;
-}
-.cart__title {
-  color: var(--gray-500);
-}
-
-/*********** cart-overlay *********/
-.cart-overlay {
-  position: absolute;
-  background-color: rgba(148, 163, 184, 0.7);
-  width: 100vw;
-  height: 100vh;
-  top: 100%;
-  left: 0;
-  right: 0;
-  transition: var(--transition);
-  visibility: visible;
-  z-index: 900;
-}
-
-.cart-verlay__container {
-  background-color: var(--white);
-  position: absolute;
-  right: 10vw;
-  top: 103%;
-  width: 380px;
-  overflow: hidden;
-  padding: 1rem;
-  z-index: 1001;
-}
-
-.cart-verlay__container .items {
-  height: 420px;
-  overflow-y: scroll;
-  margin-bottom: 2rem;
-}
-
-.cart-verlay__container > h5 {
-  margin-bottom: 1.5rem;
-}
-
-.cart-item * {
-  margin: 0;
-}
-.cart-item h4,
-.cart-item h5 {
-  margin: 0.25rem 0;
-}
-
-.cart-item {
-  display: grid;
-  grid-template-columns: 3fr 1fr 3fr;
-  gap: 1rem;
-  margin-bottom: 2rem;
-}
-
-.cart-item:not(.cart-item:last-child) {
-  padding-bottom: 2rem;
-  border-bottom: 2px solid var(--gray-300);
-}
-
-.cart-item__info {
-  margin-left: 3px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.cart-item__info__attribute ul {
-  display: flex;
-  gap: 0.5rem;
-}
-
-.cart-item__info__attribute ul li {
-  font-size: 14px;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 0.25rem;
-  min-width: 30px;
-  height: 30px;
-  border: 1px solid black;
-  transition: var(--transition);
-}
-
-.cart-item__info__attribute ul li.active:not(.color) {
-  background-color: var(--gray-800);
-  font-weight: 100;
-  color: var(--white);
-}
-/* 
-.cart-item__info__attribute ul li:hover:not(.color) {
-  background-color: var(--gray-300);
-  color: var(--gray-800);
-} */
-
-.cart-item__controls {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  justify-self: end;
-}
-
-.cart-item__controls button {
-  font-size: 2rem;
-  line-height: 2rem;
-  cursor: pointer;
-  border: 1px solid var(--gray-500);
-  width: 2rem;
-  height: 2rem;
-  background-color: var(--white);
-  transition: var(--transition);
-  text-align: center;
-}
-
-.cart-item__controls button:hover {
-  background-color: var(--primary-300);
-}
-
-.cart-item__controls span {
-  font-size: 1.25rem;
-}
-
-.cart-item__info__attribute ul li.color {
-  background-color: green;
-  cursor: pointer;
-  min-width: 16px;
-  width: 16px;
-  height: 16px;
-  outline: 1px solid transparent;
-  outline-offset: 2px;
-}
-
-.cart-item__info__attribute .color.active,
-.cart-item__info__attribute .color:hover {
-  outline-color: green;
-}
-
-.cart-item__image {
-  box-shadow: var(--shadow-1);
-}
-
-.cart-overlay__total-price p {
-  text-transform: capitalize;
-  font-weight: bold;
-}
-
-.cart-overlay__total-price {
-  margin-bottom: 2rem;
-}
-.cart-overlay__total-price,
-.cart-overlay__actions {
-  display: flex;
-  justify-content: space-between;
-}
-
-.currency-list * {
-  padding: 0;
-  margin: 0;
-}
-
-.currency-list {
-  background-color: var(--white);
-  position: absolute;
-  right: 10%;
-  top: 110%;
-  box-shadow: var(--shadow-2);
-  z-index: 1001;
-}
-
-.currency-list ul {
-  cursor: auto;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
-  justify-content: space-between;
-}
-
-.currency-list ul li {
-  transition: var(--transition);
-  display: flex;
-  gap: 0.5rem;
-  padding: 0.5rem 1.5rem;
-  cursor: pointer;
-}
-
-.currency-list ul li:hover {
-  background-color: var(--gray-200);
-}
-
-.cart-summary {
-  padding: 1rem;
-  margin-bottom: 3rem;
-}
-.cart-summary .summary-info {
-  font-size: 1.25rem;
-  display: flex;
-  gap: 0.5rem;
-}
-
-.cart-summary .summary-info span {
-  font-weight: bold;
-}
-
-.btn-cart-order {
-  width: 280px;
-  font-size: var(--smallText);
-  border: none;
 }
