--- a/src/Components/MiniCart/MiniCartItem.module.css
+++ b/src/Components/MiniCart/MiniCartItem.module.css
@@ -8,7 +8,7 @@
 
 .cart_item {
   display: grid;
-  grid-template-columns: 3fr 1fr 3fr;
+  grid-template-columns: 1fr 1fr;
   gap: 1rem;
   margin-bottom: 2rem;
 }
@@ -21,8 +21,17 @@
 .cart_item__info {
   margin-left: 3px;
   display: flex;
+  gap: 0.5rem;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.item_display {
+  display: flex;
+  gap: 1rem;
+
+  justify-content: end;
+  align-items: stretch;
 }
 
 .cart_item__controls {
@@ -55,9 +64,4 @@
 
 .cart_item__image {
   box-shadow: var(--shadow-1);
-  justify-self: end;
-}
-
-.slider_container {
-  justify-self: end;
 }
